<resources>
    <string name="app_name">Pos Terminal</string>
    <string name="dev">Dev</string>
    <string name="test">Test</string>
    <string name="custom">Custom</string>
    <string name="forgot_pass">Parolamı \nUnuttum</string>
    <string name="log_in">Giriş \nYap</string>
    <string name="password">Parola</string>
    <string name="phone_no">Telefon No</string>
    <string name="tckn_vkn">TCKN/VKN</string>
    <string name="terminal_id">Terminal Id</string>
    <string name="member_id">Üye İşyeri Id</string>
    <string name="verification_code">Doğrulama Kodu</string>
    <string name="verification_content">Lütfen, telefon numaranıza gönderilen kodu giriniz.</string>
    <string name="sample_phone_number">(+90 538 XXX XX 37)</string>
    <string name="change_password">Parolayı Değiştir</string>
    <string name="change_pass_content">Yeni parolanızı oluşturmak için TCKN/VKN ve telefon numaranızı giriniz.</string>
    <string name="cancel">İptal</string>
    <string name="ok">Tamam</string>
    <string name="save">Kaydet</string>
    <string name="verify">Doğrula</string>
    <string name="temporary_pin">Geçici Pin</string>
    <string name="new_password">Yeni Parola</string>
    <string name="new_password_again">Yeni Parola Tekrar</string>
    <string name="password_reset">Parola Yenileme</string>
    <string name="password_reset_content">Lütfen telefon numaranıza gönderilen geçici pini ve yeni parolanızı giriniz</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="manager">YÖNETİCİ</string>
    <string name="cashier">KASİYER</string>
    <string name="resend">Tekrar Gönder</string>
    <string name="timer">2:00</string>
    <string name="not_matched">Hatalı parola, tekrar deneyin</string>
    <string name="matched">Giriş Başarılı</string>
    <string name="pass_db_null">PasswordFromDb is null</string>
    <string name="uye_isyeri_no">Üye İşyeri No</string>
    <string name="cashier_forgot_password_warn">Sadece Yönetici hesaplar parolalarını değiştirebilirler</string>
    <string name="empty_fields">Lütfen, tüm alanları doldurun.</string>
    <string name="start_sale">Satışa Başla</string>
    <string name="cancel_sale">Satış İptal Et</string>
    <string name="e_document">E-Belge</string>
    <string name="show_products">Ürünleri Göster</string>
    <string name="payment_operations">Ödeme İşlemleri</string>
    <string name="options">Seçenekler</string>
    <string name="no_category">Kategori Bulunamadı!</string>
    <string name="no_service">Servis Bulunamadı</string>
    <string name="no_product">Ürün Bulunamadı</string>
    <string name="product_content">Ürün eklemek için aşağıdaki artı (+) \n butonuna tıklayınız.</string>
    <string name="category_content">Kategori eklemek için aşağıdaki artı (+) \n butonuna tıklayınız.</string>
    <string name="service_content">Servis eklemek için aşağıdaki artı (+) \n butonuna tıklayınız.</string>
    <string name="order_no">Sipariş No:</string>
    <string name="sample_order_no">2207197154300005741886</string>
    <string name="empty_shopping_cart">Sepeti Boşalt</string>
    <string name="button_cash">Nakit</string>
    <string name="button_credit_card">Kredi Kartı</string>
    <string name="service_product_code">Servis/Ürün kodu</string>
    <string name="service_product_content">Servis/Ürün İçeriği</string>
    <string name="quantity">Birim/Adet</string>
    <string name="cost">Tutar</string>
    <string name="sample_sum_cost">₺00,00</string>
    <string name="sum">Toplam:</string>
    <string name="kdv">KDV:</string>
    <string name="sample_kdv_cost">₺00,00</string>
    <string name="swipe">Kartı Okutunuz</string>
    <string name="item_delete">Sil</string>
    <string name="item_edit">Düzenle</string>
    <string name="camera_category">Kategori görselini ekleyiniz.</string>
    <string name="camera_product">Ürün görselini ekleyiniz.</string>
    <string name="warn_price">Lütfen, fiyatı yazarken virgül kullanınız.</string>
    <string name="api_level_warn">Required min API level is 26.</string>
    <string name="order_successful">Sipariş oluşturuldu</string>
    <string name="order_cancel">Sipariş iptal edildi</string>
    <string name="loading">Yükleniyor...</string>
    <string name="add_cashier">Kasiyer Ekle</string>
    <string name="success_add_cashier">İşlem başarıyla gerçekleştirildi.</string>
    <string name="dialog_empty">Sepeti Boşalt</string>
    <string name="dialog_content_empty">Bu işlemi gerçekleştirmek istediğinizden emin misiniz?</string>
    <string name="email">E-Posta</string>
    <string name="customer_information">Lütfen bilgilerden en az birini doldurunuz.</string>
    <string name="adapter_document_no">Doküman No</string>
    <string name="adapter_mali_id">Mali ID</string>
    <string name="adapter_terminal_id">Terminal ID</string>
    <string name="couldnt_get_order">Sipariş detayları getirilemedi</string>
    <string name="adapter_all_result">Bütün Sonuçlar</string>
    <string name="adapter_successful">Başarılı Satış</string>
    <string name="adapter_basket_cancel">Sepet İptal</string>
    <string name="adapter_cancel_sale">Satış İptal</string>
    <string name="adapter_all_documents">Bütün Belgeler</string>
    <string name="adapter_today">Bugün</string>
    <string name="adapter_yesterday">Dün</string>
    <string name="adapter_last_week">Son bir hafta</string>
    <string name="adapter_last_month">Son bir ay</string>
    <string name="adapter_e_receipt">E-Fatura</string>
    <string name="adapter_e_archive_receipt">E-Arşiv Fatura</string>
    <string name="add_product">ürünü sepetinize eklendi.</string>
    <string name="navigation_from">from</string>
    <string name="navigation_from_category">category</string>
    <string name="navigation_from_product">product</string>
    <string name="category_id_or_product_id">category_id_or_product_id</string>
    <string name="products_category_id">productsCategoryId</string>
    <string name="no_authorization">Yetkiniz yok.</string>

    <string name="user_terminal_id">terminal_id</string>
    <string name="user_vkn_tckn">vkn_tckn</string>
    <string name="user_uye_isyeri_no">uye_isyeri_no</string>
    <string name="user_password">password</string>
    <string name="user_full_name">full_name</string>
    <string name="user_date">date</string>
    <string name="user_time">time</string>
    <string name="user_iptal_iade">iptal_iade</string>
    <string name="user_tahsilat">tahsilat</string>
    <string name="user_kasiyer_goruntuleme">kasiyer_goruntuleme</string>
    <string name="user_kasiyer_ekleme_duzenleme">kasiyer_ekleme_duzenleme</string>
    <string name="user_kasiyer_silme">kasiyer_silme</string>
    <string name="user_urun_goruntuleme">urun_goruntuleme</string>
    <string name="user_urun_ekleme_duzenleme">urun_ekleme_duzenleme</string>
    <string name="user_urun_silme">urun_silme</string>
    <string name="user_tum_raporları_goruntuleme">tum_raporları_goruntuleme</string>
    <string name="user_rapor_kaydet_gonder">rapor_kaydet_gonder</string>
    <string name="user_pos_yonetimi">pos_yonetimi</string>
    <string name="user_admin">admin</string>
    <string name="user_remember_me_manager">remember_me_manager</string>
    <string name="user_remember_me_terminal">remember_me_terminal</string>
</resources>