<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progressBarResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextViewPassBaslik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/password_reset"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextViewPassContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|center_horizontal"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/password_reset_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextViewPassBaslik" />

    <TextView
        android:id="@+id/textViewResendResetFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextViewPassContent" />

    <TextView
        android:id="@+id/textViewCountDownTimerResetFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextViewPassContent">

    </TextView>

    <TextView
        android:id="@+id/titleTextViewPasswordResetPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|center_horizontal"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/sample_phone_number"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCountDownTimerResetFragment" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextViewPasswordResetPhone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTemporaryPin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/temporary_pin"
            android:textColorHint="#B6B5B5"
            app:boxStrokeColor="@color/background"
            app:counterTextColor="@color/black"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            app:startIconDrawable="@drawable/baseline_pin_24"
            app:startIconTint="#575656">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextTemporaryPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="5"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNewPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/new_password"
            android:textColorHint="@color/text_hint"
            app:boxStrokeColor="@color/background"
            app:prefixTextColor="@color/black"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            app:startIconDrawable="@drawable/baseline_password_24"
            app:startIconTint="#575656">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#B6B5B5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNewPasswordAgain"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/new_password_again"
            android:textColorHint="#B6B5B5"
            app:boxStrokeColor="@color/background"
            app:counterTextColor="@color/black"

            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            app:startIconDrawable="@drawable/baseline_password_24"
            app:startIconTint="#575656">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextNewPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/outlinedButtonCancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="140dp"
            android:layout_height="72dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/background"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:rippleColor="@color/white" />

        <Button
            android:id="@+id/outlinedButtonConfirm"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="140dp"
            android:layout_height="72dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/background"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:rippleColor="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
