<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewShoppingCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="-36dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="120dp"
        android:elevation="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/buttonEmptyShoppingCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:text="@string/empty_shopping_cart"
                    app:icon="@drawable/cart_remove" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/linearLayoutCostDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="12dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewKdvTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kdv"
                            android:textColor="@color/background"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewKdvCost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_kdv_cost"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewSumTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sum"
                            android:textColor="@color/background"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewSumCost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_sum_cost"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#80000000" />

            <LinearLayout
                android:id="@+id/linearLayoutButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCash"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="140dp"
                    android:layout_height="72dp"
                    android:layout_marginEnd="36dp"
                    android:backgroundTint="@color/background"
                    android:text="@string/button_cash"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:rippleColor="@color/white" />

                <Button
                    android:id="@+id/buttonCreditCard"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="140dp"
                    android:layout_height="72dp"
                    android:backgroundTint="@color/background"
                    android:text="@string/button_credit_card"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:rippleColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>