<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewBrand"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="48dp"
        android:paddingHorizontal="48dp"
        android:src="@drawable/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingHorizontal="24dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBrand">

        <RadioGroup
            android:id="@+id/radio_button_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_dev"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:text="@string/dev" />

            <RadioButton
                android:id="@+id/radio_button_test"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:text="@string/test" />

            <RadioButton
                android:id="@+id/radio_button_custom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/custom" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTerminalId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/terminal_id"
            android:textColorHint="@color/text_hint"
            app:boxStrokeColor="@color/black"
            app:counterMaxLength="11"
            app:counterTextColor="@color/black"
            app:endIconMode="clear_text"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            app:startIconDrawable="@drawable/baseline_terminal_24"
            app:startIconTint="@color/start_icon_tint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTerminalId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="11"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTCKN"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/tckn_vkn"
            android:textColorHint="@color/text_hint"
            app:boxStrokeColor="@color/black"
            app:counterMaxLength="11"
            app:counterTextColor="@color/black"
            app:endIconMode="clear_text"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            app:startIconDrawable="@drawable/baseline_account_circle_24"
            app:startIconTint="@color/start_icon_tint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextTCKN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutMemberStore"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/member_id"
            android:textColorHint="@color/text_hint"
            app:boxStrokeColor="@color/black"
            app:prefixTextColor="@color/black"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            app:startIconDrawable="@drawable/baseline_cottage_24"
            app:startIconTint="@color/start_icon_tint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextMemberStore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="13"
                android:textColor="@color/black"
                android:textColorHint="#B6B5B5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/text_hint"
            app:boxStrokeColor="@color/black"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#575656"
            app:prefixTextColor="@color/black"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            app:startIconDrawable="@drawable/baseline_password_24"
            app:startIconTint="@color/start_icon_tint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#B6B5B5" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="140dp"
                android:layout_height="72dp"
                android:backgroundTint="@color/background"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:rippleColor="@color/white" />

        </LinearLayout>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>